crates/obzenflow_core/tests/compile_fail/effect_outcome_bad_crate_attribute.rs
// SPDX-License-Identifier: MIT OR Apache-2.0
// SPDX-FileCopyrightText: 2025-2026 ObzenFlow Contributors
// https://obzenflow.dev

use obzenflow_core::{EffectOutcomeFacts, TypedPayload};
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, Serialize, Deserialize)]
struct FirstFact;

impl TypedPayload for FirstFact {
    const EVENT_TYPE: &'static str = "compile_fail.first";
}

#[derive(Debug, Clone, EffectOutcomeFacts)]
#[effect_outcome(path = obzenflow_core)]
pub enum BadAttribute {
    Present(FirstFact),
}

fn main() {}
